Navbar text overflow fixed

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -59,11 +59,27 @@ nav {
 
 @media only screen and (max-width: 1200px) {
    #nav-icon {
-       font-size: 42px;
+       font-family: 'Calibri', sans-serif;
+       font-weight: bold;
+       font-size: 27px;
        padding: 5px 0 0 0; 
-       vertical-align: middle;
+       color: rgb(97, 0, 0);
+       
    }
    #nav-icon img {
-       width: 40px;
+       width: 35px;
+       vertical-align: baseline;
    }
+
+   #cart-quantity {
+    width: 55px;
+    height: 50px;
+    background-size: 50px 39px;
+    font-size: 18px;
+   }
+
+   #cart-name {
+    height: 65px;
+    align-items: center;
+    }
 }
